# ai-horde-oai

./: .gitignore  AVOID_BAN.md  AVOID_BAN_PLAN.md  DOUBLE_CHECK_UNAVAILABLE_PLAN.md  Dockerfile  ENHANCE.md  PLAN.md  README.md  _repro_entry.json  docker-compose.yaml  pyproject.toml  reproduce_empty_response.py
.claude/: settings.local.json
app/: config.py  constants.py  log_store.py  main.py
app/horde/: chat_templates.py  client.py  filters.py  retry.py  routing.py  templates.py  tool_parser.py  translate.py
app/routers/: chat.py  completions.py  embeddings.py  images.py  models.py
app/schemas/: horde.py  openai.py
app/tui/: app.py
app/tui/screens/: chat.py  config.py  dashboard.py  history.py  logs.py  models.py  welcome.py
app/tui/widgets/: ban_status.py  (+3 more)
app/webui/: router.py  ws.py
manual_tests/: reproduce_empty_response.py
refs/: horde_server_database_functions.py
tests/: conftest.py  test_api.py  test_chat.py  test_chat_templates.py  test_client.py  test_completions.py  test_config.py  test_e2e.py  test_filters.py  test_images.py  test_log_middleware.py  test_log_store.py  test_model_table.py  test_models.py  test_real_inference.py  test_retry.py  test_routing.py  test_templates.py  test_tools.py  test_translate.py  test_tui.py  test_tui_api_e2e.py  test_unified_log_tui.py
tests/fixtures/: horde_generate.json  horde_image.json  horde_models.json  horde_user.json
tests/webui/: conftest.py  test_active_requests_tracking.py  test_api_config.py  test_api_dashboard.py  test_api_logs.py  test_api_models.py  test_integration.py  test_ws.py
(+9 files in other folders)
